--- a/homework1/index.html
+++ b/homework1/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="zxx">
 	<head>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -85,148 +85,5 @@
 		<footer class="footer">
 			Я футер
 		</footer>
-
-
-		<!-- Анатомия HTML-тега -->
-
-		<!-- Теги с закрывающим элементом -->
-		<!-- Тег открылся -->
-		<!-- <имя тега> -->
-		<!-- Содержимое тега -->
-		<!-- Тег закрылся -->
-		<!-- </имя тега> -->
-
-		<!-- Теги без закрывающего элемента -->
-		<!-- Тег добавлен -->
-		<!-- <имя тега> -->
-
-		<!-- HTML-атрибуты -->
-		<!-- последовательность атрибутов не имеет значения -->
-		<!-- <имя тега имя атрибута="значение атрибута" имя атрибута> -->
-		<!-- ... -->
-		<!-- </имя тега> -->
-
-		<!-- ---------------------------------------------- -->
-		<!-- Строительные теги (блочные) -->
-		<!-- ---------------------------------------------- -->
-		<!-- DIV Тег без конкретного предназначения -->
-		<!-- <div class="block"></div> -->
-
-		<!-- HEADER MAIN FOOTER -->
-		<!-- HEADER-верхняя часть (шапка) сайта/блока -->
-		<!-- <header class="header"></header> -->
-
-		<!-- MAIN-главная (уникальная) часть страницы -->
-		<!-- <main class="main"></main> -->
-
-		<!-- FOOTER-нижняя часть (подвал) сайта -->
-		<!-- <footer class="footer"></footer> -->
-
-		<!-- NAV-навигация  -->
-		<!-- <nav class="menu"></nav> -->
-
-		<!-- ---------------------------------------------- -->
-		<!-- Теги для контента -->
-		<!-- ---------------------------------------------- -->
-		<!-- Теги заголовков (блочные) -->
-		<!-- H1-H6 -->
-		<!-- 
-		<h1>Я заголовок</h1>
-		<h2>Я заголовок</h2>
-		<h3>Я заголовок</h3>
-		<h4>Я заголовок</h4>
-		<h5>Я заголовок</h5>
-		<h6>Я заголовок</h6>
-		-->
-
-		<!-- Теги маркировки строки (строчные) -->
-		<!-- mark и span -->
-		<!-- mark выделяет текст желтым фоном -->
-		<!-- 
-		Lorem <mark>ipsum</mark> dolor
-		<span>Я спан</span>
-		-->
-
-		<!-- P-параграф (блочный) -->
-		<!-- 
-		<p>
-			Lorem ipsum dolor sit amet, consectetur
-		</p>
-		 -->
-
-		<!-- Тег перевода строки -->
-		<!-- <br> -->
-		<!-- 
-		<p>
-			Lorem ipsum dolor sit amet, <br> consectetur
-		</p>
-		 -->
-
-		<!-- Списки UL/OL, LI (блочные) -->
-		<!-- Маркинованный список UL -->
-		<!-- 
-		<ul>
-			<li>Я пункт</li>
-			<li>Я пункт</li>
-			<li>Я пункт</li>
-			<li>Я пункт</li>
-			<li>
-				Я пункт
-				<ul>
-					<li>Я подпункт</li>
-					<li>Я подпункт</li>
-					<li>Я подпункт</li>
-					<li>Я подпункт</li>
-				</ul>
-			</li>
-			<li>Я пункт</li>
-			<li>Я пункт</li>
-			<li>Я пункт</li>
-			<li>Я пункт</li>
-		</ul>
-		 -->
-		<!-- 
-		<ol>
-			<li>Я пункт №1</li>
-			<li>Я пункт №2</li>
-			<li>
-				Я пункт №3
-				<ol>
-					<li>Я пункт</li>
-					<li>Я пункт</li>
-					<li>Я пункт</li>
-				</ol>
-			</li>
-			<li>Я пункт №4</li>
-			<li>Я пункт №5</li>
-		</ol>
-		 -->
-
-		<!-- A ссылка (строчный) -->
-
-		<!-- 
-			href - адрес ссылки
-			tagret - где откроется адрес, значение _blank откроет ссылку в новой вкладке
-		 -->
-		<!-- 
-		<a href="" target="_blank" class="link">
-			Текст (анкор) ссылки
-		</a>
-		 -->
-		<!-- 
-		<p class="text">
-			Lorem, <mark>ipsum</mark> dolor sit amet <a href="">consectetur</a> adipisicing elit. Eius vero recusandae maxime cum vitae voluptatibus numquam inventore a voluptate illum, maiores eligendi cumque? Et, dolore consectetur numquam cupiditate nam ipsum.
-		</p>
-		 -->
-
-		<!-- IMG - вставка картинки (блочно-строчный) -->
-		<!-- 
-			src - путь к картинке
-			alt - альтернативный текст
-		 -->
-		<!-- 
-		<img width="100" src="img/logo.png" alt="">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis et possimus nam at nihil fugit quia rerum esse, cumque reiciendis incidunt laborum mollitia praesentium quibusdam modi necessitatibus dolores quis. Totam.
-		 -->
-
 	</body>
 </html>
