--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
    <ul>
       <li>Lesson-1 (without homework)</li>
       <li><a href="homework1/index.html">Lesson-2</a></li>
+      <li><a href="homework2/index.html">Lesson-3</a></li>
    </ul>
 </nav>
