--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
       <li>Lesson-1 (without homework)</li>
       <li><a href="homework2/index.html">Lesson-2</a></li>
       <li><a href="homework3/index.html">Lesson-3</a></li>
+      <li><a href="homework4/index.html">Lesson-4</a></li>
    </ul>
 </nav>
