--- a/homework3/index.html
+++ b/homework3/index.html
@@ -14,6 +14,8 @@
 		</style>
 	</head>
 	<body>
+		<a href="../index.html">Вернуться к списку домашек</a>
+		<br>
 		<h1 style="color:brown;">Стили инлайн Сумматоры: определения, классификация, уравнения, структуры и применение</h1>
 		<p class="text">Основной элементарной операцией, выполняемой над кодами чисел в цифровых устройствах, является арифметическое сложение.</p>
 		<br>
