--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
       <li><a href="homework2/index.html">Lesson-2</a></li>
       <li><a href="homework3/index.html">Lesson-3</a></li>
       <li><a href="homework4/index.html">Lesson-4</a></li>
+      <li><a href="homework5/index.html">Lesson-4</a></li>
    </ul>
 </nav>
