--- a/homework5/index.html
+++ b/homework5/index.html
@@ -70,7 +70,7 @@
 				<div class="nuances-1">Выравнивание по центру Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed nam beatae totam voluptas harum dolores cupiditate corrupti vel asperiores blanditiis deleniti, ipsa id voluptates ullam enim tempora officia possimus labore?</div>
 				<div class="nuances-2">Схлопывание Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed nam beatae totam voluptas harum dolores cupiditate corrupti vel asperiores blanditiis deleniti, ipsa id voluptates ullam enim tempora officia possimus labore?</div>
 				<div class="nuances-3">content-box Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed nam beatae totam voluptas harum dolores cupiditate corrupti vel asperiores blanditiis deleniti, ipsa id voluptates ullam enim tempora officia possimus labore?</div>
-				<div class="nuances-4">padding-box Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed nam beatae totam voluptas harum dolores cupiditate corrupti vel asperiores blanditiis deleniti, ipsa id voluptates ullam enim tempora officia possimus labore?</div>
+				<div class="nuances-4">padding-box dont work already <a href="https://www.w3.org/TR/css-ui-3/#box-model">link</a></div>
 				<div class="nuances-5">border-box Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi beatae amet quisquam, repellat tempora vero minus natus at eius aspernatur quaerat corporis laudantium enim officiis assumenda repudiandae qui eos accusantium.</div>
 				<div class="nuances-6">width 100% and margin Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi beatae amet quisquam, repellat tempora vero minus natus at eius aspernatur quaerat corporis laudantium enim officiis assumenda repudiandae qui eos accusantium.</div>
 			</div>
