--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
       <li><a href="homework3/index.html">Lesson-3</a></li>
       <li><a href="homework4/index.html">Lesson-4</a></li>
       <li><a href="homework5/index.html">Lesson-5</a></li>
+      <li><a href="homework6/index.html">Lesson-6</a></li>
    </ul>
 </nav>
