--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
       <li><a href="homework4/index.html">Lesson-4</a></li>
       <li><a href="homework5/index.html">Lesson-5</a></li>
       <li><a href="homework6/index.html">Lesson-6</a></li>
+      <li><a href="homework7/index.html">Lesson-7</a></li>
    </ul>
 </nav>
