--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
       <li><a href="homework5/index.html">Lesson-5</a></li>
       <li><a href="homework6/index.html">Lesson-6</a></li>
       <li><a href="homework7/index.html">Lesson-7</a></li>
+      <li><a href="homework8/index.html">Lesson-8</a></li>
    </ul>
 </nav>
