--- a/homework8/index.html
+++ b/homework8/index.html
@@ -12,7 +12,7 @@
 			<header id="header">
 				<nav>
 					<ul>
-						<li><a tabindex="1" class="back" target="_blank" href="https://comp.com">Вернуться к списку домашек</a></li>
+						<li><a class="back" href="../index.html">Вернуться к списку домашек</a></li>
 					</ul>
 				</nav>
 			</header>
