--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
       <li><a href="homework6/index.html">Lesson-6</a></li>
       <li><a href="homework7/index.html">Lesson-7</a></li>
       <li><a href="homework8/index.html">Lesson-8</a></li>
+      <li><a href="homework9/index.html">Lesson-9</a></li>
    </ul>
 </nav>
