--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
       <li><a href="homework7/index.html">Lesson-7</a></li>
       <li><a href="homework8/index.html">Lesson-8</a></li>
       <li><a href="homework9/index.html">Lesson-9</a></li>
+      <li><a href="homework10/index.html">Lesson-10</a></li>
    </ul>
 </nav>
