--- a/homework10/index.html
+++ b/homework10/index.html
@@ -136,10 +136,10 @@
 						<h2 class="block-name__title"></h2>
 					</div>
 					<div class="benefits__selectors">
-						<button class="benefits__selector benefits__selector_active"></button>
-						<button class="benefits__selector"></button>
-						<button class="benefits__selector"></button>
-						<button class="benefits__selector"></button>
+						<button class="benefits__selector benefits__selector_active"><
+						<button class="benefits__selector">
+						<button class="benefits__selector">
+						<button class="benefits__selector">
 					</div>
 					<div class="benefits__block block-benefits">
 						<h3 class="block-benefits__title"></h3>
@@ -181,7 +181,7 @@
 				</div>
 				<div class="event__more more-event">
 					<p class="more-event__text"></p>
-					<button class="more-event__button button-solid"></button>
+					<button class="more-event__button button-solid">
 				</div>
 			</div>
 			<div class="certificates">
@@ -319,8 +319,8 @@
 						<h2 class="block-name__title"></h2>
 					</div>
 					<form class="subscribe__form">
-						<input class="subscribe__input"></input>
-						<button class="subscribe__submit"></button>
+						<input class="subscribe__input">
+						<button class="subscribe__submit">
 					</form>
 				</div>
 			</div>
@@ -368,7 +368,7 @@
 					<div class="contact-us__email"></div>
 				</div>
 				<div class="footer__newsletter newsletter">
-					<input class="newsletter__input"></input>
+					<input class="newsletter__input">
 					<div class="newsletter__subtext"></div>
 				</div>
 				<div class="footer__bottom">
