--- a/homework10/index.html
+++ b/homework10/index.html
@@ -179,7 +179,7 @@
 						<a class="event__button button-outline"></a>
 					</div>
 				</div>
-				<div class="event__more more-event">
+				<div class="events__more more-event">
 					<p class="more-event__text"></p>
 					<button class="more-event__button button-solid">
 				</div>
