--- a/homework10/index.html
+++ b/homework10/index.html
@@ -190,7 +190,7 @@
 						<h4 class="block-name__subtitle"></h4>
 						<h2 class="block-name__title"></h2>
 					</div>
-					<p class="certificates_text"></p>
+					<p class="certificates__text"></p>
 					<div class="certificates__accredited">
 						<div class="certificates__image"><img src="" alt=""></div>
 						<div class="certificates__image"><img src="" alt=""></div>
