--- a/homework10/index.html
+++ b/homework10/index.html
@@ -262,10 +262,10 @@
 						<h2 class="block-name__title"></h2>
 					</div>
 					<div class="testimonials__carousel">
-						<div class="testimonials_card card-testimonials">
+						<div class="testimonials__card card-testimonials">
 							<div class="card-testimonials__paragraph"></div>
 							<div class="card-testimonials__photo"><img src="" alt=""></div>
-							<div class="card-testimonials_bio"></div>
+							<div class="card-testimonials__bio"></div>
 							<div class="card-testimonials__position"></div>
 						</div>
 					</div>
@@ -283,7 +283,7 @@
 							<div class="card-blog__image"><img src="" alt=""></div>
 							<p class="card-blog__type"></p>
 							<p class="card-blog__sphere"></p>	
-							<p class="card-blog_date"></p>
+							<p class="card-blog__date"></p>
 							<p class="card-blog__time-to-read"></p>
 							<h5 class="card-blog__title"></h5>
 							<p class="card-blog__paragraph"></p>
@@ -293,7 +293,7 @@
 							<div class="card-blog__image"><img src="" alt=""></div>
 							<p class="card-blog__type"></p>
 							<p class="card-blog__sphere"></p>	
-							<p class="card-blog_date"></p>
+							<p class="card-blog__date"></p>
 							<p class="card-blog__time-to-read"></p>
 							<h5 class="card-blog__title"></h5>
 							<p class="card-blog__paragraph"></p>
@@ -303,7 +303,7 @@
 							<div class="card-blog__image"><img src="" alt=""></div>
 							<p class="card-blog__type"></p>
 							<p class="card-blog__sphere"></p>	
-							<p class="card-blog_date"></p>
+							<p class="card-blog__date"></p>
 							<p class="card-blog__time-to-read"></p>
 							<h5 class="card-blog__title"></h5>
 							<p class="card-blog__paragraph"></p>
