--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
       <li><a href="homework8/index.html">Lesson-8</a></li>
       <li><a href="homework9/index.html">Lesson-9</a></li>
       <li><a href="homework10/index.html">Lesson-10</a></li>
+      <li><a href="homework11/index.html">Lesson-11</a></li>
    </ul>
 </nav>
