--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
       <li><a href="homework9/index.html">Lesson-9</a></li>
       <li><a href="homework10/index.html">Lesson-10</a></li>
       <li><a href="homework11/index.html">Lesson-11</a></li>
+      <li><a href="homework12/index.html">Lesson-12</a></li>
    </ul>
 </nav>
