--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
       <li><a href="homework10/index.html">Lesson-10</a></li>
       <li><a href="homework11/index.html">Lesson-11</a></li>
       <li><a href="homework12/index.html">Lesson-12</a></li>
+      <li><a href="homework13/index.html">Lesson-13</a></li>
    </ul>
 </nav>
