--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
       <li><a href="homework11/index.html">Lesson-11</a></li>
       <li><a href="homework12/index.html">Lesson-12</a></li>
       <li><a href="homework13/index.html">Lesson-13</a></li>
+      <li><a href="homework14/index.html">Lesson-14</a></li>
    </ul>
 </nav>
