--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
       <li><a href="homework12/index.html">Lesson-12</a></li>
       <li><a href="homework13/index.html">Lesson-13</a></li>
       <li><a href="homework14/index.html">Lesson-14</a></li>
+      <li><a href="homework15/index.html">Lesson-15</a></li>
    </ul>
 </nav>
