--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
       <li><a href="homework13/index.html">Lesson-13</a></li>
       <li><a href="homework14/index.html">Lesson-14</a></li>
       <li><a href="homework15/index.html">Lesson-15</a></li>
+      <li><a href="homework16/index.html">Lesson-16</a></li>
    </ul>
 </nav>
