--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
       <li><a href="homework14/index.html">Lesson-14</a></li>
       <li><a href="homework15/index.html">Lesson-15</a></li>
       <li><a href="homework16/index.html">Lesson-16</a></li>
+      <li><a href="homework17/index.html">Lesson-17</a></li>
    </ul>
 </nav>
