--- a/homework17/index.html
+++ b/homework17/index.html
@@ -141,7 +141,7 @@
 							<img src="img/Line1.png" alt="line">
 						</div>
 						<div class="decore-video__ball">
-							<img src="img/tennis ball.png" alt="tennis ball">
+							<img src="img/tennisBall.png" alt="tennis ball">
 						</div>
 					</div>
 					<div class="video__items">
