--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
       <li><a href="homework15/index.html">Lesson-15</a></li>
       <li><a href="homework16/index.html">Lesson-16</a></li>
       <li><a href="homework17/index.html">Lesson-17</a></li>
+      <li><a href="homework18/index.html">Lesson-18</a></li>
    </ul>
 </nav>
