--- a/homework18/index.html
+++ b/homework18/index.html
@@ -15,7 +15,7 @@
 			<div class="header__container">
 				<nav class="header__nav">
 					<a href="#" class="header__logo">
-						<img src="img/logo.svg" alt="logo">
+						<img src="img/Logo.svg" alt="logo">
 					</a>
 					<ul class="header__list">
 						<li><a href="#">Menu</a></li>
